# rtask

./: .gitignore  1.yaml  Cargo.toml  README.md
src/: daemon.rs  funcs.rs  main.rs  server.rs  types.rs  utils.rs
webui/: README.md  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  config.ts  main.ts  types.ts
webui/src/components/: EntriesComponents.vue  EntryEditor.vue
webui/src/components/router/: index.ts
webui/src/router/: index.ts
webui/src/stores/: storage.ts
webui/src/types/: Action.ts  DateTime.ts  DoIfRunning.ts  Duration.ts  EditingEntry.ts  Entry.ts  EntryIdentifier.ts  Execute.ts  Logger.ts  Process.ts  ReqCommonData.ts  Status.ts  SystemUser.ts  TimeZone.ts  Timer.ts  Trigger.ts  TriggerState.ts  UnixUser.ts  WindowsUser.ts  Work.ts  index.ts
webui/src/views/: DashboardView.vue  LoginView.vue
