[package]
name = "rtodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sysinfo = "0.29.0"
tokio = { version = "1.28.1", features = ["full"] }
